[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Network_setup.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Rowdies.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Background.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.690196, 0.690196, 0.690196, 1 )

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_server" type="Button" parent="Background/Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = -88.0
margin_right = 267.5
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_created" type="Label" parent="Background/Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.5
margin_top = -90.0
margin_right = 231.5
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
text = "Server Started"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room_code" type="Label" parent="Background/Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Waiting For Code..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_game" type="Button" parent="Background/Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -267.5
margin_top = -260.0
margin_right = 267.5
margin_bottom = -84.0
custom_fonts/font = ExtResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Background/Multiplayer_configure/Start_game" to="." method="_on_Start_game_pressed"]
